--- a/etl/src/main/resources/application.yml
+++ b/etl/src/main/resources/application.yml
@@ -19,3 +19,10 @@ spring:
     url: jdbc:mysql://localhost:3306/etldb?useTimezone=true&serverTimezone=UTC
     username: root
     password: admin
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/discovery/eureka
